Ensure leftmost timezone is visible for large teams and small screens

--- a/assets/stylesheets/pages/team.styl
+++ b/assets/stylesheets/pages/team.styl
@@ -131,13 +131,14 @@ $toolbarItemHeight = 32px;
   position relative
   z-index: 5
   display: flex
-  height: 100%;
+  height: 100%
+  max-width: 100%
   justify-content: center
-  flex-grow: 1 // this grows, the sidebar is a fixed width
+  flex-grow: 1 // this grows
+  overflow-y: scroll
 
 // For teams larger than 10 colums
 .timezone-list-wide
-  justify-content: flex-start // for wide teams left justify the columns
 
   .timezone
     padding-left: 0.8em
@@ -158,6 +159,8 @@ $toolbarItemHeight = 32px;
     width: 54px
     line-height: 54px // for placeholder
 
+
+
 .team-stats
   position absolute
   bottom 0.5em
@@ -165,6 +168,10 @@ $toolbarItemHeight = 32px;
   right 0
   text-align center
   color $mutedColor
+
+.timezone-wrapper
+  display: flex
+  max-width: 100%
 
 .timezone
   padding: 1em
@@ -513,15 +520,13 @@ input[type="text"].manage-team--invite-url
 
   .app-sidebar--format-select
     display: none
-    // margin-right: 0.8em
-    // white-space: nowrap
 
-  // .app-sidebar--admin
-
-  .timezone-list
-    margin-top: 6em
+  .timezone-list,
+  .timezone-wrapper
     justify-content: flex-start
     flex-direction: column-reverse
+
+
 
   .team-stats
     position relative
